# unoff-landz

./: .gitignore  CMakeLists.txt  README.md  attributes.h  broadcast.c  broadcast.h  broadcast_actor_functions.c  broadcast_actor_functions.h  carry_capacity.lst  channels.lst  char_type.lst  character.lst  character_creation.h  character_inventory.c  character_inventory.h  character_movement.c  character_movement.h  character_race.c  character_race.h  character_race_tbl.h  character_type.c  character_type.h  characters.c  characters.h  chat.c  chat.h  chat_channels.h  client_protocol.h  client_protocol_handler.c  client_protocol_handler.h  clients.h  colour.h  database.c  database.h  database_buffer.c  database_buffer.h  database_functions.c  database_functions.h  date_time_functions.c  date_time_functions.h  (+78 more)
Client/: 2d_objects.cpp  2d_objects.h  3d_objects.cpp  3d_objects.h  CMakeLists.txt  achievements.cpp  achievements.h  actor_init.cpp  actor_init.h  actor_scripts.cpp  actor_scripts.h  actors.cpp  actors.h  asc.cpp  asc.h  astrology.cpp  bags.cpp  bags.h  bbox_tree.cpp  bbox_tree.h  books.cpp  buddy.cpp  buddy.h  buffs.cpp  buffs.h  cache.cpp  cache.h  cal.cpp  cal.h  cal3d_wrapper.h  calc.cpp  chat.cpp  chat.h  cluster.cpp  cluster.h  colors.cpp  colors.h  command_queue.cpp  command_queue.h  console.cpp  (+175 more)
Client/actor_defs/: phantom_warrior.xml  skeleton_armed.xml  tiger.xml  tiger_white.xml
Client/engine/: hardwarebuffer.cpp  hardwarebuffer.hpp  logging.cpp  logging.hpp
Client/exceptions/: extendedexception.cpp  extendedexception.hpp
Client/eye_candy/: effect_bag.cpp  effect_bag.h  effect_breath.cpp  effect_breath.h  effect_campfire.cpp  effect_campfire.h  effect_candle.cpp  effect_candle.h  effect_cloud.cpp  effect_cloud.h  effect_firefly.cpp  effect_firefly.h  effect_fountain.cpp  effect_fountain.h  effect_glow.cpp  effect_glow.h  effect_harvesting.cpp  effect_harvesting.h  effect_impact.cpp  effect_impact.h  effect_lamp.cpp  effect_lamp.h  effect_mines.cpp  effect_mines.h  effect_missile.cpp  effect_missile.h  effect_ongoing.cpp  effect_ongoing.h  effect_selfmagic.cpp  effect_selfmagic.h  effect_smoke.cpp  effect_smoke.h  effect_staff.cpp  effect_staff.h  effect_summon.cpp  effect_summon.h  effect_sword.cpp  effect_sword.h  effect_targetmagic.cpp  effect_targetmagic.h  (+8 more)
Client/fsaa/: fsaa.cpp
Client/io/: cal3d_io_wrapper.cpp  cal3d_io_wrapper.h  e3d_io.cpp  elc_io.cpp  elc_io.h  elfilewrapper.cpp  elfilewrapper.h  elpathwrapper.cpp  elpathwrapper.h  fileutil.cpp  fileutil.h  half.cpp  half.h  map_io.cpp  normal.cpp  normal.h  unzip.cpp  xmlcallbacks.cpp  zip.cpp  ziputil.cpp  ziputil.h
Client/map_editor/: map_editor.dsp
Client/shader/: noise.cpp  shader.cpp  shader.h
Client/shaders/: anim.vert  anim_depth.vert  anim_ghost.vert  anim_ghost_shadow.vert  anim_shadow.vert
Client/skybox/: skybox_default.xml
Client/xz/: LzmaEnc.c  Types.h
Common/: CMakeLists.txt
Server/: CMakeLists.txt  attributes.c  attributes.h  bags.c  bags.h  boats.c  boats.h  broadcast_actor_functions.c  broadcast_actor_functions.h  broadcast_chat.c  broadcast_chat.h  broadcast_equipables.c  broadcast_equipables.h  broadcast_movement.c  broadcast_movement.h  char_experience.c  char_experience.h  character_creation.c  character_creation.h  character_inventory.c  character_inventory.h  character_movement.c  character_movement.h  character_race.c  character_race.h  character_race_tbl.h  character_skill.c  character_skill.h  character_type.c  character_type.h  characters.c  characters.h  chat.c  chat.h  client_protocol.h  client_protocol_handler.c  client_protocol_handler.h  clients.c  clients.h  colour.c  (+81 more)
Server/db/: database_functions.c  database_functions.h  db_attribute_tbl.c  db_attribute_tbl.h  db_boat_tbl.c  db_boat_tbl.h  db_character_inventory_tbl.c  db_character_inventory_tbl.h  db_character_race_tbl.c  db_character_race_tbl.h  db_character_tbl.c  db_character_tbl.h  db_character_type_tbl.c  db_character_type_tbl.h  db_chat_channel_tbl.c  db_chat_channel_tbl.h  db_e3d_tbl.c  db_e3d_tbl.h  db_game_data_tbl.c  db_game_data_tbl.h  db_gender_tbl.c  db_gender_tbl.h  db_guild_tbl.c  db_guild_tbl.h  db_map_object_tbl.c  db_map_object_tbl.h  db_map_tbl.c  db_map_tbl.h  db_npc_action_tbl.c  db_npc_action_tbl.h  db_npc_trigger_tbl.c  db_npc_trigger_tbl.h  db_object_tbl.c  db_object_tbl.h  db_season_tbl.c  db_season_tbl.h  db_skill_tbl.c  db_skill_tbl.h  db_skills_tbl.c  db_skills_tbl.h  (+5 more)
Tools/e3d_converter/: Makefile  dds.c  dds.h  e3d.c  e3d.h  files.c  files.h  half.h  main.c  normal.c  normal.h  obj.c  obj.h
Tools/elm/: main.c
Tools/obj_converter/: Makefile  create_e3d.c  create_e3d.h  files.c  files.h  main.c  normal.c
Tools/ul_conv/: common.h  dds.c  dds.h  e3d.c  e3d.h  file.c  file.h  half.h  main.c  makefile  normal.c  normal.h  obj.c  obj.h  processing_options.c  processing_options.h
cmake/: FindLibEV.cmake
